[gd_scene load_steps=18 format=3 uid="uid://be8hl4weaft7d"]

[ext_resource type="Script" uid="uid://bydtmfnv5gj6u" path="res://Levels/level.gd" id="1_fjysl"]
[ext_resource type="PackedScene" uid="uid://bx0msm0hagnj0" path="res://Player/player.tscn" id="2_y6c2c"]
[ext_resource type="Script" uid="uid://bdd3erwlvffxt" path="res://UI/ui.gd" id="3_0b23m"]
[ext_resource type="PackedScene" uid="uid://buiitvt4ugobf" path="res://Player/heart.tscn" id="4_3xsl5"]
[ext_resource type="PackedScene" uid="uid://bumwcljyyl83x" path="res://Scenes/fixed_hex.tscn" id="5_qbn24"]
[ext_resource type="PackedScene" uid="uid://cqk5n14hafk01" path="res://Components/dialog_box.tscn" id="6_j4cnv"]
[ext_resource type="Script" uid="uid://05wfyw363rdi" path="res://Components/tutorial_component.gd" id="6_l2662"]
[ext_resource type="PackedScene" uid="uid://deo5mpbd2emu5" path="res://Scenes/string.tscn" id="8_fjysl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mac0m"]
bg_color = Color(0.0583, 0.144778, 0.53, 0.34902)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
expand_margin_left = 3.0
expand_margin_top = 3.0
expand_margin_right = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5o3kl"]
bg_color = Color(0.278431, 0.831373, 0.780392, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_53w0m"]
bg_color = Color(0, 0, 0, 0.142)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gs7ah"]
bg_color = Color(0, 0.252889, 0.154017, 0.34902)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
expand_margin_left = 3.0
expand_margin_top = 3.0
expand_margin_right = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3on5e"]
bg_color = Color(0.390005, 0.861767, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_qbn24"]

[sub_resource type="Gradient" id="Gradient_gs7ah"]
offsets = PackedFloat32Array(0, 0.343434, 0.686869, 1)
colors = PackedColorArray(0, 0.188235, 0.231373, 1, 0.5, 0.235, 0.235, 1, 1, 0.807843, 0.588235, 1, 0.945098, 0.94902, 0.854902, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_3on5e"]
gradient = SubResource("Gradient_gs7ah")

[sub_resource type="Environment" id="Environment_53w0m"]
background_mode = 1
volumetric_fog_enabled = true
adjustment_enabled = true
adjustment_color_correction = SubResource("GradientTexture1D_3on5e")

[node name="test_level" type="Node3D"]
script = ExtResource("1_fjysl")

[node name="Player" parent="." node_paths=PackedStringArray("corazon") groups=["Player"] instance=ExtResource("2_y6c2c")]
unique_name_in_owner = true
corazon = NodePath("Heart")
c_regen_speed = 0.1

[node name="Camera3D" type="Camera3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 8, 7.33)
fov = 54.7

[node name="UI" type="Control" parent="Player/Camera3D"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 3
script = ExtResource("3_0b23m")

[node name="Cooldown" type="ProgressBar" parent="Player/Camera3D/UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -160.0
offset_top = 20.0
offset_right = 160.0
offset_bottom = 47.0
grow_horizontal = 2
theme_override_styles/background = SubResource("StyleBoxFlat_mac0m")
theme_override_styles/fill = SubResource("StyleBoxFlat_5o3kl")
max_value = 2.0
value = 2.0
show_percentage = false

[node name="Label" type="Label" parent="Player/Camera3D/UI/Cooldown"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -39.0
offset_top = 3.0
offset_right = 39.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 0
text = "Energy"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="Player/Camera3D/UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -79.0
offset_right = 331.0
offset_bottom = 1.0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_53w0m")

[node name="Health" type="ProgressBar" parent="Player/Camera3D/UI/Panel"]
layout_mode = 1
offset_left = 6.0
offset_top = 12.0
offset_right = 326.0
offset_bottom = 39.0
theme_override_styles/background = SubResource("StyleBoxFlat_gs7ah")
theme_override_styles/fill = SubResource("StyleBoxFlat_3on5e")
value = 100.0

[node name="Label" type="Label" parent="Player/Camera3D/UI/Panel/Health"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -39.0
offset_top = 3.0
offset_right = 39.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 0
text = "Health"
horizontal_alignment = 1

[node name="SPEED" type="Label" parent="Player/Camera3D/UI"]
layout_mode = 0
offset_right = 278.0
offset_bottom = 147.0
text = "X
Z
"

[node name="Heart" parent="Player" node_paths=PackedStringArray("follow") instance=ExtResource("4_3xsl5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.91436, 0.75, 5.4977)
mass = 10.0
follow = NodePath("..")
string_max_distance = 16.0
s_force = 1000.0
s_damping = 0.2
p_deceleration = 45.0

[node name="Environment" type="Node" parent="."]

[node name="tilesito" type="StaticBody3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.560677, 0, 0)
collision_layer = 7
collision_mask = 7

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/tilesito"]
shape = SubResource("ConvexPolygonShape3D_qbn24")

[node name="GPUParticlesCollisionBox3D" type="GPUParticlesCollisionBox3D" parent="Environment/tilesito"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.56, 0)
size = Vector3(29.2659, 1.11591, 30.2412)

[node name="Post-Process" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Post-Process"]
environment = SubResource("Environment_53w0m")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Post-Process"]
transform = Transform3D(1, 0, 0, 0, 0.768261, 0.640136, 0, -0.640136, 0.768261, 0, 7.20663, 0)
light_energy = 0.5
shadow_enabled = true
shadow_transmittance_bias = -1.9
shadow_opacity = 0.25

[node name="FixedHex0" parent="." node_paths=PackedStringArray("Targets") instance=ExtResource("5_qbn24")]
Targets = {
"Target1": NodePath("../FixedHex1"),
"Target2": null,
"Target3": null,
"Target4": null,
"Target5": null,
"Target6": null
}
Up = true

[node name="FixedHex2" parent="." node_paths=PackedStringArray("Targets") instance=ExtResource("5_qbn24")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.4, 0, 0)
Targets = {
"Target1": null,
"Target2": null,
"Target3": null,
"Target4": null,
"Target5": null,
"Target6": null
}
Downed = true

[node name="FixedHex1" parent="." node_paths=PackedStringArray("Targets") instance=ExtResource("5_qbn24")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.2, 0, -9.05)
Targets = {
"Target1": null,
"Target2": null,
"Target3": null,
"Target4": null,
"Target5": null,
"Target6": null
}
Downed = true

[node name="TutorialComponent" type="Node3D" parent="." node_paths=PackedStringArray("Dialog")]
script = ExtResource("6_l2662")
Dialog = NodePath("DialogBox")

[node name="DialogBox" parent="TutorialComponent" instance=ExtResource("6_j4cnv")]
InputEnable = true
Typetime = 0.05
Quickypetime = 0.005
Dialog = PackedStringArray("Good, its working...", "Try moving with WASD", "Okay that looks about right...", "Now, you may have noticed that string pulling you", "Try pressing and holding the SPACEBAR to pull ", "That thing is your heart and you can hit enemies with it", "Start getting used to swinging that thing around, you will need it to survive", "You can also knock back enemies by pressing the Q button", "You learn quick...", "Now, lets see you hack some stuff", "Get close to the edge and your heart will take it from there", "Wait for it...", "See? Now you can keep trying to hack the whole system", "")

[node name="String" parent="." node_paths=PackedStringArray("PointA", "PointB") instance=ExtResource("8_fjysl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.278732, 5.38965, 0.62126)
PointA = NodePath("../Player")
PointB = NodePath("../Player/Heart")

[connection signal="updated_energy" from="Player" to="Player/Camera3D/UI" method="_on_player_cooldown_changed"]
[connection signal="Done" from="TutorialComponent/DialogBox" to="TutorialComponent" method="_on_dialog_box_done"]
